[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/textures/backgrounds/1/background.png" type="Texture" id=1]
[ext_resource path="res://src/cameraScript.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/backgrounds/1/parallax_1.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/backgrounds/1/parallax_2.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/backgrounds/1/parallax_3.png" type="Texture" id=5]
[ext_resource path="res://src/levelSettings.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/ui/cd_banner.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/tilesets/bricks/tileset.png" type="Texture" id=8]
[ext_resource path="res://src/tilePlacer.gd" type="Script" id=9]
[ext_resource path="res://assets/textures/ui/grid.png" type="Texture" id=10]
[ext_resource path="res://src/toggleGrid.gd" type="Script" id=11]
[ext_resource path="res://src/GlobalVars.gd" type="Script" id=12]
[ext_resource path="res://scenes/actors/mario/Mario.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/pauseScript.gd" type="Script" id=15]
[ext_resource path="res://assets/fonts/delfino_black_outline.tres" type="DynamicFont" id=16]
[ext_resource path="res://Assets/Fonts/texteffect_matrix.tres" type="RichTextEffect" id=17]
[ext_resource path="res://Assets/Fonts/texteffect_pulse.tres" type="RichTextEffect" id=18]
[ext_resource path="res://Assets/Fonts/texteffect_ghost.tres" type="RichTextEffect" id=19]
[ext_resource path="res://assets/music/grass/yoshi_star_galaxy.ogg" type="AudioStream" id=20]
[ext_resource path="res://src/musicManager.gd" type="Script" id=21]
[ext_resource path="res://src/fpsSetter.gd" type="Script" id=27]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "Tileset.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 32, 32 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Main" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
scroll_base_offset = Vector2( 0, 296 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.075, 0.5 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
motion_scale = Vector2( 0.15, 0.5 )
motion_mirroring = Vector2( 1616, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 2
motion_scale = Vector2( 0.3, 0.5 )
motion_mirroring = Vector2( 1536, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 5 )
centered = false

[node name="CloudBackground" type="CanvasLayer" parent="."]
layer = -128

[node name="Sprite" type="Sprite" parent="CloudBackground"]
position = Vector2( 0, -1.05408 )
z_index = -4096
z_as_relative = false
texture = ExtResource( 1 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -80 )
rotating = true
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )
cameraSpeed = 7

[node name="LevelSettings" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Banner" type="Sprite" parent="UI"]
visible = false
scale = Vector2( 0.332695, 0.33526 )
texture = ExtResource( 7 )
centered = false

[node name="Pause" type="ColorRect" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 0.4
margin_right = 460.8
margin_bottom = 432.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="UI/Pause"]
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = -39.4
margin_right = -163.2
margin_bottom = 155.0
custom_fonts/normal_font = ExtResource( 16 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=150 freq=2][center][rainbow freq=0.3][wave]PAUSE[/wave][/rainbow][/center]"
text = "PAUSE"
scroll_active = false
custom_effects = [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostTile" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
offset = Vector2( -32, -32 )
region_enabled = true
region_rect = Rect2( 96, 0, 32, 32 )

[node name="Grid" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="Grid"]
visible = false
motion_mirroring = Vector2( 1024, 512 )
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Grid/ParallaxLayer"]
texture = ExtResource( 10 )
centered = false

[node name="GlobalVars" type="Node2D" parent="."]
script = ExtResource( 12 )
gameMode = "Testing"
maxGravityVelocity = Vector2( 475, 475 )

[node name="TileMap" type="TileMap" parent="."]
z_index = -9
z_as_relative = false
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 917510, 1, 0, 917528, 1, 0, 983046, 1, 0, 1048582, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048594, 1, 0, 1114118, 1, 0, 1114125, 1, 0, 1179654, 1, 0, 1179661, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245197, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1310730, 1, 0, 1310733, 1, 0, 1310736, 1, 0, 1376266, 1, 0, 1376269, 1, 0, 1376272, 1, 0, 1441802, 1, 0, 1441805, 1, 0, 1441808, 1, 0, 1507338, 1, 0, 1507341, 1, 0, 1507344, 1, 0, 1572874, 1, 0, 1572877, 1, 0, 1572880, 1, 0, 1638413, 1, 0, 1703949, 1, 0, 1769482, 1, 0, 1769483, 1, 0, 1769484, 1, 0, 1769485, 1, 0, 1769486, 1, 0, 1769487, 1, 0, 1769488, 1, 0, 1835028, 1, 0, 1835029, 1, 0, 1835032, 1, 0, 1835033, 1, 0, 1900544, 1, 0, 1900545, 1, 0, 1900546, 1, 0, 1900547, 1, 0, 1900548, 1, 0, 1900549, 1, 0, 1900550, 1, 0, 1900551, 1, 0, 1900552, 1, 0, 1900553, 1, 0, 1900554, 1, 0, 1900555, 1, 0, 1900556, 1, 0, 1900557, 1, 0, 1900558, 1, 0, 1900559, 1, 0, 1900560, 1, 0, 1900561, 1, 0, 1900562, 1, 0, 1900563, 1, 0, 1900564, 1, 0, 1900569, 1, 0, 1900570, 1, 0, 1900571, 1, 0, 1900572, 1, 0, 1900573, 1, 0, 1900574, 1, 0, 1900575, 1, 0, 1900576, 1, 0, 1900577, 1, 0, 1900578, 1, 0, 1900579, 1, 0, 1900580, 1, 0, 1900581, 1, 0, 1900582, 1, 0, 1900583, 1, 0, 1900584, 1, 0, 1900585, 1, 0, 1900586, 1, 0, 1900587, 1, 0, 1900588, 1, 0, 1900589, 1, 0, 1900590, 1, 0, 1900591, 1, 0, 1900592, 1, 0, 1900593, 1, 0, 1900594, 1, 0, 1900595, 1, 0, 1900596, 1, 0, 1900597, 1, 0, 1900598, 1, 0, 1900599, 1, 0, 1900600, 1, 0, 1900601, 1, 0, 1900602, 1, 0, 1900603, 1, 0, 1900604, 1, 0, 1900605, 1, 0, 1900606, 1, 0, 1900607, 1, 0, 1900608, 1, 0, 1900609, 1, 0, 1900610, 1, 0, 1900611, 1, 0, 1900612, 1, 0, 1900613, 1, 0, 1900614, 1, 0, 1900615, 1, 0, 1900616, 1, 0, 1900617, 1, 0, 1900618, 1, 0, 1900619, 1, 0, 1900620, 1, 0, 1900621, 1, 0, 1900622, 1, 0, 1900623, 1, 0, 1900624, 1, 0, 1900625, 1, 0, 1900626, 1, 0, 1900627, 1, 0, 1900628, 1, 0, 1900629, 1, 0, 1900630, 1, 0, 1900631, 1, 0, 1900632, 1, 0, 1900633, 1, 0, 1900634, 1, 0, 1900635, 1, 0, 1900636, 1, 0, 1900637, 1, 0, 1900638, 1, 0, 1900639, 1, 0, 1900640, 1, 0, 1900641, 1, 0, 1900642, 1, 0, 1900643, 1, 0, 1900644, 1, 0, 1900645, 1, 0, 1900646, 1, 0, 1900647, 1, 0, 1900648, 1, 0, 1900649, 1, 0, 1900650, 1, 0, 1900651, 1, 0, 1900652, 1, 0, 1900653, 1, 0, 1900654, 1, 0, 1900655, 1, 0, 1900656, 1, 0, 1900657, 1, 0, 1900658, 1, 0, 1900659, 1, 0, 1900660, 1, 0, 1900661, 1, 0, 1900662, 1, 0, 1900663, 1, 0, 1900664, 1, 0, 1900665, 1, 0, 1900666, 1, 0, 1900667, 1, 0, 1900668, 1, 0, 1900669, 1, 0, 1900670, 1, 0, 1900671, 1, 0, 1900672, 1, 0, 1900673, 1, 0, 1900674, 1, 0, 1900675, 1, 0, 1900676, 1, 0, 1900677, 1, 0, 1900678, 1, 0, 1900679, 1, 0, 1900680, 1, 0, 1900681, 1, 0, 1900682, 1, 0, 1900683, 1, 0, 1900684, 1, 0, 1900685, 1, 0, 1900686, 1, 0, 1900687, 1, 0, 1900688, 1, 0, 1900689, 1, 0, 1900690, 1, 0, 1900691, 1, 0, 1900692, 1, 0, 1900693, 1, 0, 1900694, 1, 0, 1900695, 1, 0, 1900696, 1, 0, 1900697, 1, 0, 1900698, 1, 0, 1900699, 1, 0, 1900700, 1, 0, 1900701, 1, 0, 1900702, 1, 0, 1900703, 1, 0, 1900704, 1, 0, 1900705, 1, 0, 1900706, 1, 0, 1900707, 1, 0, 1900708, 1, 0, 1900709, 1, 0, 1900710, 1, 0, 1900711, 1, 0, 1900712, 1, 0, 1900713, 1, 0, 1900714, 1, 0, 1900715, 1, 0, 1900716, 1, 0, 1900717, 1, 0, 1900718, 1, 0, 1900719, 1, 0, 1900720, 1, 0, 1900721, 1, 0, 1900722, 1, 0, 1900723, 1, 0, 1900724, 1, 0, 1900725, 1, 0, 1900726, 1, 0, 1900727, 1, 0, 1900728, 1, 0, 1900729, 1, 0, 1900730, 1, 0, 1900731, 1, 0, 1900732, 1, 0, 1900733, 1, 0, 1900734, 1, 0, 1900735, 1, 0, 1900736, 1, 0, 1900737, 1, 0, 1900738, 1, 0, 1900739, 1, 0, 1900740, 1, 0, 1900741, 1, 0, 1900742, 1, 0, 1900743, 1, 0, 1900744, 1, 0, 1900745, 1, 0, 1900746, 1, 0, 1900747, 1, 0, 1900748, 1, 0, 1900749, 1, 0, 1900750, 1, 0, 1900751, 1, 0, 1900752, 1, 0, 1900753, 1, 0, 1900754, 1, 0, 1900755, 1, 0, 1900756, 1, 0, 1900757, 1, 0, 1900758, 1, 0, 1900759, 1, 0, 1900760, 1, 0, 1900761, 1, 0, 1900762, 1, 0, 1900763, 1, 0, 1900764, 1, 0, 1900765, 1, 0, 1900766, 1, 0, 1900767, 1, 0, 1900768, 1, 0, 1900769, 1, 0, 1900770, 1, 0, 1900771, 1, 0, 1900772, 1, 0, 1900773, 1, 0, 1900774, 1, 0, 1900775, 1, 0, 1900776, 1, 0, 1900777, 1, 0, 1900778, 1, 0, 1900779, 1, 0, 1900780, 1, 0, 1900781, 1, 0, 1900782, 1, 0, 1900783, 1, 0, 1900784, 1, 0, 1900785, 1, 0, 1900786, 1, 0, 1900787, 1, 0, 1900788, 1, 0, 1900789, 1, 0, 1900790, 1, 0, 1900791, 1, 0, 1900792, 1, 0, 1900793, 1, 0, 1900794, 1, 0, 1900795, 1, 0, 1900796, 1, 0, 1900797, 1, 0, 1900798, 1, 0, 1900799, 1, 0, 1900800, 1, 0, 1900801, 1, 0, 1900802, 1, 0, 1900803, 1, 0, 1900804, 1, 0, 1900805, 1, 0, 1900806, 1, 0, 1900807, 1, 0, 1900808, 1, 0, 1900809, 1, 0, 1900810, 1, 0, 1900811, 1, 0, 1900812, 1, 0, 1900813, 1, 0, 1900814, 1, 0, 1900815, 1, 0, 1900816, 1, 0, 1900817, 1, 0, 1900818, 1, 0, 1900819, 1, 0, 1900820, 1, 0, 1900821, 1, 0, 1900822, 1, 0, 1900823, 1, 0, 1900824, 1, 0, 1900825, 1, 0, 1900826, 1, 0, 1900827, 1, 0, 1900828, 1, 0, 1900829, 1, 0, 1900830, 1, 0, 1900831, 1, 0, 1900832, 1, 0, 1900833, 1, 0, 1900834, 1, 0, 1900835, 1, 0, 1900836, 1, 0, 1900837, 1, 0, 1900838, 1, 0, 1900839, 1, 0, 1900840, 1, 0, 1900841, 1, 0, 1900842, 1, 0, 1900843, 1, 0, 1900844, 1, 0, 1900845, 1, 0, 1900846, 1, 0, 1900847, 1, 0, 1900848, 1, 0, 1900849, 1, 0, 1900850, 1, 0, 1900851, 1, 0, 1900852, 1, 0, 1900853, 1, 0, 1900854, 1, 0, 1900855, 1, 0, 1900856, 1, 0, 1900857, 1, 0, 1900858, 1, 0, 1900859, 1, 0, 1900860, 1, 0, 1900861, 1, 0, 1900862, 1, 0, 1900863, 1, 0, 1900864, 1, 0, 1900865, 1, 0, 1900866, 1, 0, 1900867, 1, 0, 1900868, 1, 0, 1900869, 1, 0, 1900870, 1, 0, 1900871, 1, 0, 1900872, 1, 0, 1900873, 1, 0, 1900874, 1, 0, 1900875, 1, 0, 1900876, 1, 0, 1900877, 1, 0, 1900878, 1, 0, 1900879, 1, 0, 1900880, 1, 0, 1900881, 1, 0, 1900882, 1, 0, 1900883, 1, 0, 1900884, 1, 0, 1900885, 1, 0, 1900886, 1, 0, 1900887, 1, 0, 1900888, 1, 0, 1900889, 1, 0, 1900890, 1, 0, 1900891, 1, 0, 1900892, 1, 0, 1900893, 1, 0, 1900894, 1, 0, 1900895, 1, 0, 1900896, 1, 0, 1900897, 1, 0, 1900898, 1, 0, 1900899, 1, 0, 1900900, 1, 0, 1900901, 1, 0, 1900902, 1, 0, 1900903, 1, 0, 1900904, 1, 0, 1900905, 1, 0, 1900906, 1, 0, 1900907, 1, 0, 1900908, 1, 0, 1900909, 1, 0, 1900910, 1, 0, 1900911, 1, 0, 1900912, 1, 0, 1900913, 1, 0, 1900914, 1, 0, 1900915, 1, 0, 1900916, 1, 0, 1900917, 1, 0, 1900918, 1, 0, 1900919, 1, 0, 1900920, 1, 0, 1900921, 1, 0, 1900922, 1, 0, 1900923, 1, 0, 1900924, 1, 0 )
script = ExtResource( 9 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
autoplay = true
script = ExtResource( 21 )

[node name="FPSSetter" type="Node" parent="."]
script = ExtResource( 27 )

[node name="Mario" parent="." instance=ExtResource( 13 )]
